--- a/views/index.hbs
+++ b/views/index.hbs
@@ -89,7 +89,7 @@
                             <h3>{{this.name}}</h3>
                             <h4>{{this.second_name}}</h4>
                             <div class="row">
-                                <a class="top-product-link card-link link-to" href="#">Перейти</a>
+                                <a class="top-product-link card-link link-to" href="product?productId={{this.id}}">Перейти</a>
                                 <span class="top-product-price  card-price">{{this.price}}₽</span>
                             </div>
                         </div>
@@ -117,7 +117,7 @@
                             <h3>{{this.header}}</h3>
                             <p>{{this.description}}</p>
                             <div class="row">
-                                <a href="#" class="personal-card-link link-to">Перейти</a>
+                                <a href="/service?serviceId={{this.id}}" class="personal-card-link link-to">Перейти</a>
                                 <span class="personal-card-price price">от {{this.price}}₽</span>
                             </div>
                         </div>
