--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -42,7 +42,39 @@ a{
   height: 8px; /* высота для горизонтального скролла */
   background-color: #143861;
 }
+//7)swiper
+.another-records{ //TODO Вынести в начало и расположить этот блок на всех страницаз
+  .swiper-container{
+    .personal-card{
+      @include serviceCard();
+    }
+    .top-product{
+      @include card();
+    }
+    .one-stage{
+      .swiper-slide{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  }
+  .swiper-horizontal-container{
+    .top-product{
+      @include card();
+    }
+  }
+}
 
+.swiper-container,.swiper-horizontal-container{
+  height: 500px;
+
+}
+.swiper-horizontal-container .swiper-slide{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 /* ползунок скроллбара */
 ::-webkit-scrollbar-thumb {
   background-color: $primary-col;
@@ -330,41 +362,7 @@ body{
     width: 100%;
     margin:24px 0;
     .personal-card{
-      width: 290px;
-      height: 460px;
-      box-shadow: 2px 4px 8px 0 rgba(0,0,0,0.5);
-      background-color: rgba(252, 237, 237, 0.85);
-      justify-content: space-between;
-      .personal-card-img{
-        width: 100%;
-        height: 170px;
-        object-fit: contain;
-        background-color: $light-gray-col;
-      }
-      .personal-card-text{
-        padding: 14px;
-        text-align: center;
-        p{
-          max-height: 175px;
-          overflow: hidden;
-        }
-        .row{
-          justify-content: space-between;
-          align-items: center;
-          margin: 10px;
-          .personal-card-link{ //TODO миксины!
-            background-color: red;
-            color: white;
-            padding: 8px 12px;
-            margin-right: 15px;
-
-          }
-          .personal-card-price{
-            color:red;
-            font-weight:bold;
-          }
-        }
-      }
+      @include serviceCard();
     }
   }
 }
@@ -459,6 +457,9 @@ body{
         margin: 10px;
       }
     }
+  }
+  .current-service-container{
+
   }
 }
 //Подвал
