--- a/views/partials/modalMenu.hbs
+++ b/views/partials/modalMenu.hbs
@@ -13,9 +13,11 @@
         <button>ОК</button>
     </form>
     <nav class="col">
-        <a href="#our-team">Наша команда</a>
-        <a href="#top">Аукцион</a>
-        <a href="#demo-example">Демо-пример</a>
-        <a href="#personal-model">Авторизация</a>
+        <a href="/#our-team">Наши орлы</a>
+        <a href="/teammates">Вся команда</a>
+        <a href="/#top">Аукцион</a>
+        <a href="/products">Все товары</a>
+        <a href="/#demo-example">Демо-пример</a>
+        <a href="/#personal-model">Авторизация</a>
     </nav>
 </div>
