--- a/views/product.hbs
+++ b/views/product.hbs
@@ -6,7 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Товар</title>
+    <script defer src="/js/script.js"></script>
     <link rel="stylesheet" href="/css/style.css">
+
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
 <body>
     {{>modalMenu}}
@@ -34,8 +37,32 @@
                     </div>
                 </div>
             {{/with}}
+            {{>bottomSlider}}
         </main>
         {{>footer}}
     </div>
+    <script type="module">
+        import Swiper from 'https://unpkg.com/swiper/swiper-bundle.esm.browser.min.js'
+        const swiper = new Swiper('.swiper-container',{
+            direction: 'vertical',
+            loop:true,
+
+            pagination:{
+                el:'.swiper-pagination',
+            },
+
+
+        });
+
+        const horizontalSwiper = new Swiper('.swiper-horizontal-container',{
+            loop:true,
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+            slidesPerView:3
+        });
+    </script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
 </html>
