--- a/views/teammate.hbs
+++ b/views/teammate.hbs
@@ -6,7 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Наш товарищ</title>
+    <script defer src="/js/script.js"></script>
     <link rel="stylesheet" href="/css/style.css">
+
+    <link rel="stylesheet" href="/css/style.css">
+
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
 <body>
     {{>modalMenu}}
@@ -37,8 +42,53 @@
                     </div>
                 </div>
             {{/with}}
+            <div class="another-records">
+                <div class="swiper-container">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper one-stage">
+                        <!-- Slides -->
+                        {{#each productsByAuthor}}
+                            <div class="swiper-slide">
+                                <div class="top-product row">
+                                    <div class="col top-product-img card-img">
+                                        <img src="/img/uploads/{{this.image}}" alt="">
+                                    </div>
+                                    <div class="col top-product-text card-text">
+                                        <h3>{{this.name}}</h3>
+                                        <h4>{{this.second_name}}</h4>
+                                        <div class="row">
+                                            <a class="top-product-link card-link link-to" href="product?productId={{this.id}}">Перейти</a>
+                                            <span class="top-product-price  card-price">{{this.price}}₽</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        {{/each}}
+                    </div>
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
+
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+
+                </div>
+            </div>
         </main>
         {{>footer}}
     </div>
+
+    <script type="module">
+        import Swiper from 'https://unpkg.com/swiper/swiper-bundle.esm.browser.min.js';
+
+        const swiper = new Swiper('.swiper-container',{
+            loop:true,
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+            slidesPerView:3
+        })
+    </script>
 </body>
 </html>
