--- a/views/teammates.hbs
+++ b/views/teammates.hbs
@@ -6,7 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Вся команда</title>
+    <script defer src="/js/script.js"></script>
     <link rel="stylesheet" href="/css/style.css">
+
 </head>
 <body>
     {{>modalMenu}}
@@ -54,6 +56,7 @@
         </main>
         {{>footer}}
     </div>
+
 
 </body>
 </html>
